Bug 161057 - [24.8] Changing dark/light application colour scheme in Draw and Impress does not switch text colour anymore in text boxes
Summary: [24.8] Changing dark/light application colour scheme in Draw and Impress does...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
24.8.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:24.8.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Dark-Mode Automatic-Color
  Show dependency treegraph
 
Reported: 2024-05-13 10:06 UTC by nobu
Modified: 2024-06-28 12:17 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description nobu 2024-05-13 10:06:03 UTC
Description:
[24.8] Changing themes in Draw and Impress makes it difficult to see text in Textbox.

Steps to Reproduce:
1. Open New Impress and open Standard Template.
2. Change theme color in Option

Actual Results:
3. The text colour does not change according to the background colour.

Expected Results:
3. Until Version 24.2, the text colour was changed to match the background colour and could be displayed.


Reproducible: Always


User Profile Reset: No

Additional Info:
Not Reproduced with
Version: 24.2.3.2 (X86_64) / LibreOffice Community
Build ID: 433d9c2ded56988e8a90e6b2e771ee4e6a5ab2ba
CPU threads: 4; OS: Windows 10.0 Build 10240; UI render: Skia/Raster; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: CL threaded

Reproducible with
Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 2b85bceca88ab119fff5cbdc41fe913435a479ca
CPU threads: 4; OS: Windows 10 (10.0 build 10240); UI render: default; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: threaded
Comment 1 stragu 2024-05-14 11:39:58 UTC Comment hidden (obsolete)
Comment 2 nobu 2024-05-15 01:26:42 UTC
Would Draw be easier to understand?

1. Open New Draw Document.
2. Insert new Textbox and write some Text.
3. Change theme color in Option.

4. The text colour is not inverted according to the theme.

Until Version 24.2, the text colour was changed according to the background colour.
Comment 3 stragu 2024-05-15 01:55:43 UTC
I just tested the following:
1. System in Dark Mode, new LO profile, open Impress, don't pick a template
2. See that placeholder text on slide is black on white background
3. Tools > Options > LibreOffice > Application Colors > change scheme from "Automatic: Light" to "Automatic: Dark" > OK

Result: black text on dark grey background

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 0dcaff6043e1f24ce0fa354dff80a86e40622247
CPU threads: 8; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: CL threaded

Not reproduced in 24.2.3: text colour changes to light colour to remain readable.

Bibisected with linux-64-24.8 repo to first bad build [e399b3b2068038faa9ed539f37aa93b8f4bd8e98] which is:

	commit 3a48ad467b7fbf9cbdfff1222e08c02b0ff5d544
	author	Caolán McNamara 	Tue Jan 30 21:29:31 2024 +0000
	committer	Caolán McNamara 	Wed Jan 31 10:33:06 2024 +0100
	use ViewShell DOCCOLOR when available
	for fallback, continue to warn if the terminal fallback gets used,
	but fill stub it to return the application DOCCOLOR
	Reviewed-on: https://gerrit.libreoffice.org/c/core/+/162782

Caolán, can you please have a look?
Comment 4 Caolán McNamara 2024-05-17 21:00:23 UTC
I think the font color is getting set in the DrawViewShell ctor, and while we are listening to the color configuration we aren't updating that font color, though we do update the background color
Comment 5 Commit Notification 2024-05-18 20:01:19 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5e23cac5767c164b93491d46deef039409ea286c

Resolves: tdf#161057 draw/impress auto font color not updated on theme change

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Caolán McNamara 2024-05-18 20:17:43 UTC
That seems to do the right thing. I believe this problem in 24.8 only so no backport required.
Comment 7 stragu 2024-06-03 04:12:25 UTC
Thanks Caolán, verified in:

Version: 24.8.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 6084962f93efc005b6827edceae12d3170f17ccd
CPU threads: 8; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: CL threaded