Resolves: tdf#161057 draw/impress auto font color not updated on theme change

Change-Id: Id3d02c38e3bbda34f65f5623fff1a5f39238e46a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/167803
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>
Tested-by: Jenkins